@startuml rhi
namespace rhi {


    class Renderer {
        .. Constructors/Destructors ..
        + {static} init(RHIRegistry: const Registry &): void
        + {static} destroy(void): void
        + Renderer(const Renderer&) = delete
        + Renderer& operator=(const Renderer&) = delete
        + Renderer(Renderer&&) = delete
        + Renderer& operator=(Renderer&&) = delete
        - Renderer(RHIRegistry: const Registry &)
        - ~Renderer()
        .. Methods ..
        + draw(entityRegistry: const entity::Registry &): void
        .. Members ..
        - {static} __instance: Renderer *
    }

    note left of Renderer
    rhi::Renderer is a singleton class
    end note

    class Registry {
        .. Constructors/Destructors ..
        + Registry(void)
        + ~Registry()
        .. Methods ..
        !!! FIXME : use template here as well !!!!!!!!!!!!!!!!!!!!!!!!!!!
        + getShaderHandle(name: const std::string &) const: def::Handle
        + getTextureHandle(name: const std::string &) const: def::Handle
        + getMeshHandle(name: const std::string &) const: def::Handle
        + getShaderResource(handle: def::Handle) const: const resource::Shader *
        + getTextureResource(handle: def::Handle) const: const resource::Texture *
        + getMeshResource(handle: def::Handle) const: const resource::Mesh *
        + addMesh(name: const std::string &, vertices: const std::vector<def::Vertex> &, indices: const std::vector<uint32_t> &): Status
        + addTexture(name: const std::string &, data: const unsigned char*, size: const glm::ivec2 &, nChannels: int): Status
        + addShader(name: const std::string &, vertexSource: const std::string &, geometrySource: const std::string &, fragmentSource: const std::string &, computeSource: const std::string &): Status
        .. Members ..
        - __shaderRegistry: __private::__registry::__Shader
        - __textureRegistry: __private::__registry::__Texture
        - __meshRegistry: __private::__registry::__Mesh
    }

    namespace __private {
        namespace __registry {
            class __Mesh {
                !!!!! FIXME : give me a parent class !!!!
                .. Constructors/Destructors ..
                + __Mesh(void)
                + ~__Mesh()
                .. Methods ..
                + getHandle(name: const std::string &) const: const def::Handle
                + getResource(handle: resource::Handle) const: const resource::Mesh *
                + exists(name: const std::string &) const: bool
                + add(name: const std::string &, vertices: const std::vector<def::Vertex> &, indices: const std::vector<uint32_t> &): Status
                .. Members ..
                - __data: std::vector<std::unique_ptr<resource::Mesh>>
                - __lookupTable: std::unordered_map<std::string, def::Handle>
            }

            class __Shader {
                !!!!! FIXME : give me a parent class !!!!
                .. Constructors/Destructors ..
                + __Shader(void)
                + ~__Shader()
                .. Methods ..
                + exists(name: const std::string &) const: bool
                + getHandle(name: const std::string &) const: def::Handle
                + getResource(handle: def::Handle) const: const resource::Shader *
                + add(name: const std::string &, vertexSource: const std::string &, geometrySource: const std::string &, fragmentSource: const std::string &, computeSource: const std::string &): Status
                .. Members ..
                - __data: std::vector<std::unique_ptr<resource::Shader>>
                - __lookupTable: std::unordered_map<std::string, def::Handle>
            }

            class __Texture {
                !!!!! FIXME : give me a parent class !!!!
                .. Constructors/Destructors ..
                + __Texture(void)
                + ~__Texture()
                .. Methods ..
                + getHandle(name: const std::string &) const: def::Handle
                + getResource(handle: def::Handle) const: const resource::Texture *
                + exists(name: const std::string &) const: bool
                + add(name: const std::string &, data: const unsigned char*, size: const glm::ivec2 &, nChannels: int): Status
                .. Members ..
                - __data: std::vector<std::unique_ptr<resource::Texture>>
                - __lookupTable: std::unordered_map<std::string, def::Handle> 
            }
        }
    }

    namespace resource {
        class Mesh {
            .. Constructors/Destructors ..
            + Mesh(vertices: const std::vector<Vertex> &, indices: const std::vector<uint32_t> &)
            + ~Mesh()
            + Mesh(const Mesh &) = delete
            + Mesh& operator=(const Mesh &) = delete
            + Mesh(Mesh &&) = delete
            + Mesh& operator=(Mesh &&) = delete
            .. Methods ..
            + draw_DELETE_ME_I_AM_NOT_SUPPOSED_TO_DRAW_MYSELF(void) const: void
            .. Members ..
            - __VAO: uint32_t
            - __EBO: uint32_t
            - __VBO: uint32_t
            - __count: uint32_t
        }        

        class Shader {
            .. Constructors/Destructors ..
            + Shader(vertexSource: const std::string &, geometrySource: const std::string &, fragmentSource: const std::string &, computeSource: const std::string &)
            + ~Shader()
            + Shader(const Shader &) = delete
            + Shader& operator=(const Shader &) = delete
            + Shader(Shader &&) = delete
            + Shader& operator=(Shader &&) = delete
            .. Methods ..
            + use(void) const: void
            + getUniforms(void) const: const std::vector<def::Uniform> &
            - {static} __compileShaderSource(source: const std::string &, type: def::ShaderType): uint32_t
            - {static} __loadProgram(vertexSource: const std::string &, geometrySource: const std::string &, fragmentSource: const std::string &, computeSource: const std::string &): uint32_t
            .. Members ..
            - __glHandle: uint32_t
            - __uniforms: std::vector<def::Uniform>

        }

        class Texture {
            .. Constructors/Destructors ..
            +Texture(data: const unsigned char *, size: const glm::ivec2 &, nChannels: int)
            + ~Texture()
            + Texture(const Texture&) = delete;
            + Texture& operator=(const Texture&) = delete
            + Texture(Texture&&) = delete;
            + Texture& operator=(Texture&&) = delete;
            - {static} __loadTexture(data: const unsigned char *, size: const glm::ivec2 &, nChannels: int): uint32_t
            .. Members ..
            - __glHandle: uint32_t
        }
    }

    namespace def {
        class "uint32_t" as u32 <<primitive>>
        class Handle <<using>>
        Handle ..> u32 : type alias

        struct Vertex {
            .. Members ..
            + position: glm::vec3
            + uv: glm::vec2
            + normal: glm::vec3
        }

        enum ShaderType {
            VERTEX,
            GEOMETRY,
            FRAGMENT,
            COMPUTE
        }

        struct Uniform {
            .. Constructors/Destructors ..
            + Uniform(name: const std::string &, location: GLint, type: GLenum)
            .. Members ..
            + name: const std::string
            + location: const GLint
            + type: const GLenum
        }
    }

    enum Status {
        N_OK,
        E_ALREADY_INIT,
        E_NOT_INIT,
        E_ALREADY_EXISTS
    }
}

rhi.resource.Mesh ..> rhi.def.Vertex : uses >

rhi.resource.Shader ..> rhi.def.ShaderType : uses >
rhi.resource.Shader ..> rhi.def.Uniform : uses >

rhi.__private.__registry.__Mesh ..> rhi.def.Vertex : uses >
rhi.__private.__registry.__Mesh ..> rhi.Status : uses >
rhi.__private.__registry.__Mesh --> rhi.def.Handle : stores >
rhi.__private.__registry.__Mesh *.. rhi.resource.Mesh : owns >

rhi.__private.__registry.__Shader ..> rhi.Status : uses >
rhi.__private.__registry.__Shader --> rhi.def.Handle : stores >
rhi.__private.__registry.__Shader *.. rhi.resource.Shader : owns >

rhi.__private.__registry.__Texture ..> rhi.Status : uses >
rhi.__private.__registry.__Texture --> rhi.def.Handle : stores >
rhi.__private.__registry.__Texture *.. rhi.resource.Texture : owns >

rhi.Registry ..> rhi.Status : uses >
rhi.Registry ..> rhi.def.Vertex : uses >
rhi.Registry --> rhi.def.Handle : stores >
rhi.Registry *.. rhi.resource.Shader : owns >
rhi.Registry *.. rhi.resource.Texture : owns >
rhi.Registry *.. rhi.resource.Mesh : owns >
rhi.Registry *.. rhi.__private.__registry.__Shader : owns >
rhi.Registry *.. rhi.__private.__registry.__Texture : owns >
rhi.Registry *.. rhi.__private.__registry.__Mesh : owns >

rhi.Renderer ..> entity.Registry : uses >
rhi.Renderer --> rhi.Registry : stores >
@enduml